src/main/resources/Patterns/AsyncRequestReply/kong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: pattern
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: "http, https"
spec:
  rules:
    http:
      paths:
      - path: ${SERVICE-ENDPOINT}  # Set path for async requests
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 80
      # Ability to add more rules
