src/main/resources/Patterns/AsyncRequestReply/nginx-ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: NGINX-auth-ingress
  namespace: pattern
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - path: /useractions/login
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 80
          - path: /useractions/logout
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 80
